--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 
 img{
     max-width: 100%;
+   
 }
 main{
     width: 70%;
@@ -27,6 +28,9 @@ main{
 a{
     color: white;
     text-decoration: none;
+}
+.small{
+    width: 30%;
 }
 
 
@@ -63,11 +67,17 @@ header{
 /* #endregion HEADER */
 
 /* #region MAIN */
-.product{
+.card_container{
     display: flex;
     width: 70%;
     margin: auto;
     flex-wrap: wrap;
+    gap: 2rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    
+    
+
 }
 
 /* #endregion MAIN */
