--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,21 @@ header{
         color: white;
  
     }
+    .like{
+        position: absolute;
+        right: 0;
+        top: 5%;
+        background-color: white;
+        font-size: 1.5rem;
+        padding: 1rem;
+        
+        
+    }
+
+
+
+
+
 }
    
 
