--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,9 @@ a{
     text-decoration: none;
 }
 
+.marg_right{
+    margin-right: 5px;
+}
 
 
 /* #endregion UTILITY */
@@ -41,6 +44,7 @@ a{
     --bol-card-color: #eaeaea;
     --bol-discount-color: #ff0000;
     --bol-disgreen-color: rgb(15, 217, 59);
+    --bol-footer-color: #1a1a1a;
 
 }
 /* #endregion COLORS  */
@@ -123,3 +127,35 @@ header{
 
 
 /* #endregion MAIN */
+
+/* #region FOOTER */
+footer{
+    background-color:#1a1a1a ;
+
+}
+
+.white{
+    color: white;
+   
+}
+.foot_container{
+   padding: 2rem;
+    position: relative;
+}
+.foot_link{
+    margin-top: 1rem;
+    padding-left: 3px;
+}
+.foot_icon{
+    position: absolute;
+    left: 90%;
+    top: 56%;
+}
+.foot_find{
+    position: absolute;
+    left: 90%;
+    top: 26%;
+}
+
+
+/* #endregion FOOTER */
