--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,12 @@ a{
 
 /* #region HEADER */
 header{
+
+
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1000;
     background-color: var(--bol-head-color);
     color: white;
     padding: 1rem;
