--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,16 +131,19 @@ header{
         background-color: white;
         font-size: 1.5rem;
         padding: 1rem;
+        display: none;
         
         
     }
 
-
+    
 
 
 
 }
-   
+.product:hover .like{
+    display: block;
+}
 
 
 /* #endregion MAIN */
