--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ header{
         background-color: white;
         font-size: 1.5rem;
         padding: 1rem;
-        display: none;
+        z-index: 200;
         
         
     }
@@ -242,7 +242,7 @@ header{
 }
 /* #region HOVER */
 .product:hover .like{
-    display: block;
+
     color: red;
 }
 
